modules/dxp/apps/osb/osb-customer/osb-customer-release-tool/osb-customer-release-tool-web/src/main/css/_highlights.scss
.detail-body {
	font-size: $font-size-default;
	margin: 8px 0 $margin-default;
}

.detail-title {
	margin: 0;
}

.fix-pack-details {
	margin-bottom: $margin-default;

	.fix-pack-version {
		font-size: 20px;
		font-weight: $font-weight-semi-bold;
		line-height: 28px;
		margin: 0;
		text-transform: none;
	}
}

.lfr-details-column,
.lfr-released-column {
	padding-top: $padding-default;
}

.lfr-details-column {
	width: 9%;

	.details {
		&.importantChanges,
		&.keyHighlights,
		&.knownIssues,
		&.security {
			> div:not(.fix-pack-details) {
				display: none;
			}
		}

		&.importantChanges div.important-changes,
		&.keyHighlights div.key-highlights,
		&.knownIssues div.known-issues,
		&.security div.security {
			display: block;
		}
	}
}

.lfr-released-column {
	vertical-align: top;
}

.no-highlights {
	font-size: $font-size-default;
	font-style: italic;
	margin-bottom: $margin-default;
}

